# portable-osciloscope

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: bootstrap-build.yml  ci.yml  linux-build.yml  release.yml  windows-build.yml
docs/adr/: 0001-use-qt-widgets.md  0002-use-portaudio.md  0003-use-cmake.md  0004-use-fftw.md
docs/architecture/: architecture.md
docs/product/: product-spec.md
docs/roadmap/: roadmap.md
docs/rules/: lint-and-ci.md
docs/tasks/: implementation-and-testing-plan.md  t0-bootstrap-plan.md
scripts/: lint.sh
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  RingBuffer.cpp  RingBuffer.h
src/dsp/: SignalMonitor.cpp  SignalMonitor.h
src/widgets/: WaveformWidget.cpp  WaveformWidget.h
tests/: CMakeLists.txt  signal_monitor_smoke_test.cpp
